# Scribend

./: .gitignore  AI_System_Prompt.md  README.md  dev3_sample_vectors.json  export_model.py  generate_dev3_samples.py  package-lock.json  package.json  run_model.py
__tests__/: patientFilters.test.ts  soapFallback.test.ts
android/: build.gradle
android/app/: build.gradle
android/app/src/main/java/com/scribend/: MainActivity.java
app/src/main/cpp/: CMakeLists.txt  README_NATIVE.md  native-lib.cpp
app/src/main/java/com/scribend/app/: ScribendNative.kt
docs/: DOWNLOADS_CHECKLIST.md  EXECUTORCH_QNN_SETUP.md  SETUP_FROM_ZERO.md
local-storage/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
local-storage/src/cpp/: scribend_store.c  scribend_store.h
local-storage/tests/: demo_search.py  test_end_to_end.py  test_final_handoff.py  test_real_vectors.c  test_storage.py  test_store.c
local-storage/tests/data/: dev3_final_test.json
local-storage/tools/: fetch_sqlite_amalgamation.sh  generate_mock_data.py  json_to_tsv.py  test_real_vectors.py
mobile/: .gitignore  AI_INTEGRATION.md  README.md  app.json  babel.config.js  index.js  jest.config.js  metro.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
mobile/__tests__/: validators.test.ts  visitFlow.test.ts
mobile/android/: build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
mobile/android/app/: .gitignore  build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/scribend/: MainApplication.java
mobile/android/app/src/main/res/drawable/: ic_launcher.xml
mobile/scripts/: check-offline-constraints.js
mobile/src/ai/: AudioCapture.ts  audio.ts  systemPrompt.ts  useScribendAI.ts
mobile/src/app/: App.tsx
mobile/src/components/: AppScreen.tsx  AppText.tsx  AppTopBar.tsx  EmptyState.tsx  ErrorState.tsx  GlassCard.tsx  OfflineStatusBanner.tsx  PatientCard.tsx  PermissionCard.tsx  PrimaryButton.tsx  RetrievedContextCard.tsx  SoapSectionCard.tsx  StatusBadge.tsx  VisitProgressStep.tsx  VisitProgressStepper.tsx
mobile/src/copy/: ScribendCopy.ts
mobile/src/data/: mockVisits.ts
mobile/src/icons/: ScribendIcons.tsx
mobile/src/models/: Navigation.ts  Visit.ts
mobile/src/navigation/: ScribendNavigator.tsx  routes.ts
mobile/src/screens/: PatientTypeScreen.tsx  PermissionsScreen.tsx  SelectPatientScreen.tsx  SoapNoteScreen.tsx  VisitInProgressScreen.tsx  WelcomeScreen.tsx
mobile/src/services/: ExecutorchAIBridge.ts  MockScribendAIBridge.ts  NativeScribendAIBridge.ts  ScribendAIBridge.ts  getScribendAIBridge.ts
mobile/src/store/: PatientStore.tsx  VisitStore.tsx
mobile/src/theme/: colors.ts  shadows.ts  spacing.ts
mobile/src/utils/: validators.ts  visitFlow.ts
model_evaluation/: test_llama_1b.py  test_llama_3b.py  test_qwen_1_5b.py  test_qwen_3b.py  test_smollm2_1_7b.py  test_whisper_base.py  test_whisper_small.py  test_whisper_tiny.py
models/: export_llama.py  export_minilm.py  export_whisper.py
scribend/: agent.py  medical_vocabulary.py  system_prompt.py
scribend/tools/: patient_history_tool.py
scripts/: build_qnn.sh  env.sh  export_sample.sh  export_whisper_qnn.sh  setup_ubuntu_qnn.sh
slides/: index.html
soap_notes/: soap_note_2026-06-27_23-14-36.md
src/app/: App.tsx
src/assets/images/: index.ts
src/components/: AppText.tsx  FeatureBox.tsx  GlassCard.tsx  GlassPanel.tsx  HealthcareComponents.tsx  IconBadge.tsx  LoadingState.tsx  NavigationButton.tsx  PatientTypeCard.tsx  PrimaryButton.tsx  SecondaryButton.tsx
src/copy/: ScribendCopy.ts
src/data/: mockPatients.ts
src/models/: Navigation.ts  Patient.ts  SoapNote.ts
src/navigation/: ScribendNavigator.tsx  routes.ts
src/screens/: AddNewPatientScreen.tsx  HomeScreen.tsx  NotesScreen.tsx  PatientDetailScreen.tsx  PatientHistoryScreen.tsx  PermissionsScreen.tsx  ProfileScreen.tsx  SavedScreen.tsx  SoapNoteScreen.tsx  VisitInProgressScreen.tsx
src/services/: MockScribendAIBridge.ts  getScribendAIBridge.ts
src/store/: PatientStore.tsx  VisitStore.tsx
src/theme/: colors.ts  radius.ts  shadows.ts  spacing.ts  typography.ts
src/utils/: ids.ts  patientFilters.ts  soapFallback.ts
tools/: generate_dev3_final_test.py  record_audio.py  test_master_pipeline.py
ui-prototype/: .gitignore  settings.gradle.kts
ui-prototype/app/: build.gradle.kts
ui-prototype/app/src/main/: AndroidManifest.xml
ui-prototype/app/src/main/assets/: patients.json  schema.sql
ui-prototype/app/src/main/cpp/: CMakeLists.txt  scribend_jni.cpp
ui-prototype/app/src/main/java/com/scribend/uiprototype/: MainActivity.kt  ScribendStore.kt
ui-prototype/app/src/main/res/values/: themes.xml
